--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIVE US DANGERZONE</title>
+    <title>mrkeww - Home</title>
     <style>
         body {
             background: linear-gradient(135deg, #8e44ad, #3498db);
@@ -101,6 +101,9 @@
             <div class="info-box-title">waiting for gta6</div>
             <div class="info-text">
                 good gamer who also codes very occasionally
+            </div>
+            <div class="quote">
+                just check my steam profile it looks better <a href="https://steamcommunity.com/id/mrkeww/" target="_blank">steam profile</a>
             </div>
             </div>
         </div>
