add other pages

--- a/links.html
+++ b/links.html
@@ -88,8 +88,8 @@
 <body>
     <div class="nav-bar">
         <a href="#" class="active">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="links.html">Links</a>
+        <a href="#">Projects</a>
+        <a href="#">Links</a>
     </div>
     
     <div class="container">
