--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mrkeww - Home</title>
+    <title>mrkeww - Projects</title>
     <style>
         body {
             background: linear-gradient(135deg, #8e44ad, #3498db);
@@ -88,8 +88,8 @@
 <body>
     <div class="nav-bar">
         <a href="#" class="active">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="links.html">Links</a>
+        <a href="#">Projects</a>
+        <a href="#">Links</a>
     </div>
     
     <div class="container">
