--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="nav-bar">
-        <a href="#" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="projects.html">Projects</a>
         <a href="links.html">Links</a>
     </div>
