--- a/links.html
+++ b/links.html
@@ -87,9 +87,9 @@
 </head>
 <body>
     <div class="nav-bar">
-        <a href="#" class="active">Home</a>
-        <a href="#">Projects</a>
-        <a href="#">Links</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="links.html">Links</a>
     </div>
     
     <div class="container">
