--- a/projects.html
+++ b/projects.html
@@ -108,5 +108,6 @@
             </div>
         </div>
     </div>
+    <embed src="https://modrinth.com/modpack/all-skyblock" style="width:500px; height: 300px;">
 </body>
 </html>
