--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
             <div class="info-box-title">waiting for gta6</div>
             <div class="info-text">
                 good gamer who also codes very occasionally
+                \n "Victory is reserved for those who are willing to pay its price." -Sun Tzu
+
+                \n "It doesn't matter what book we are reading, as long as we are on the same page." -Jynxzi
+
+                \n "The opportunity of defeating the enemy is provided by the enemy himself." -Sun Tzu, The Art of War
+
+                \n "The supreme art of war is to subdue the enemy without fighting." -Sun Tzu, The Art of War
+
+                \n "You can hide your cheats but you cannot hide how bad you are." -NeokCS
+
+                \n "I'm a simple man, I see head I click.but sometimes, I miss." -FURI
             </div>
             <div class="quote">
                 just check my steam profile it looks better <a href="https://steamcommunity.com/id/mrkeww/" target="_blank">steam profile</a>
