--- a/links.html
+++ b/links.html
@@ -98,12 +98,9 @@
         </div>
         
         <div class="info-box">
-            <div class="info-box-title">waiting for gta6</div>
+            <div class="info-box-title">Links</div>
             <div class="info-text">
-                good gamer who also codes very occasionally
-            </div>
-            <div class="quote">
-                just check my steam profile it looks better <a href="https://steamcommunity.com/id/mrkeww/" target="_blank">steam profile</a>
+                
             </div>
             </div>
         </div>
