--- a/projects.html
+++ b/projects.html
@@ -136,6 +136,12 @@
         .project-button:hover {
             background-color: #9ad0f5;
         }
+        
+        .project-image {
+            float: right;
+            margin: 0 0 15px 20px;
+            border-radius: 4px;
+        }
     </style>
 </head>
 <body>
@@ -151,6 +157,7 @@
         </div>
         
         <div class="project-box">
+            <img src="https://cdn.modrinth.com/data/HMm5nRel/4d73531b56755371ebcf0747e6c029ae58089b21_96.webp" alt="All SkyBlock Logo" class="project-image">
             <div class="project-title">All SkyBlock</div>
             <div class="project-description">
                 A Hypixel SkyBlock™ Modpack that has the best utility mods for skyblock all in one pack!
