--- a/links.html
+++ b/links.html
@@ -101,6 +101,7 @@
             <div class="info-box-title">
                 <a href="https://steamcommunity.com/id/mrkeww/" target="_blank">steam profile</a><br>
                 <a href="https://modrinth.com/user/mrkeww" target="_blank">modrinth profile</a>
+                <a href="https://github.com/mrkeww" target="_blank">github profile</a>
             </div>
         </div>
     </div>
