--- a/projects.html
+++ b/projects.html
@@ -186,6 +186,7 @@
                     <li>Best mods for hypixel skyblock all in one pack</li>
                     <li>Easy install with modrinth app or other launchers</li>
                     <li>Regular updates</li>
+                    <li>Preconfigured config (optimized for 1080p monitors)</li>
                 </ul>
             </div>
             <a href="https://modrinth.com/modpack/all-skyblock" class="project-button" target="_blank">View on Modrinth</a>
