--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <img src="https://avatars.fastly.steamstatic.com/3393fb67b18a96b6f1d7151ead3575c53840510f_full.jpg" alt="Steam Avatar" class="profile-avatar">
             <div class="info-box-title">mrkeww</div>
             <div class="info-text">
-            Good gamer who also codes very occasionally<br>
+            Good gamer who doesn't have time to play games nearly as much anymore. I also code very occasionally<br>
             <br>
             "Victory is reserved for those who are willing to pay its price." -Sun Tzu<br>
             <br>
