Update quotes formatting and authors in index.html

--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
             <div class="info-text">
             Good gamer who doesn't have time to play games nearly as much anymore. I also code very occasionally<br>
             <br>
-            "Victory is reserved for those who are willing to pay its price." -Sun Tzu<br>
+            "Victory is reserved for those who are willing to pay its price." ~ Sun Tzu<br>
             <br>
-            "It doesn't matter what book we are reading, as long as we are on the same page." -Jynxzi<br>
+            "It doesn't matter what book we are reading, as long as we are on the same page." ~ Jynxzi<br>
             <br>
-            "The opportunity of defeating the enemy is provided by the enemy himself." -Sun Tzu, The Art of War<br>
+            "The opportunity of defeating the enemy is provided by the enemy himself." ~ Sun Tzu, The Art of War<br>
             <br>
-            "The supreme art of war is to subdue the enemy without fighting." -Sun Tzu, The Art of War<br>
+            "The supreme art of war is to subdue the enemy without fighting." ~ Sun Tzu, The Art of War<br>
             <br>
-            "You can hide your cheats but you cannot hide how bad you are." -NeokCS<br>
+            "You can hide your cheats but you cannot hide how bad you are." ~ NeokCS<br>
             <br>
-            "I'm a simple man, I see head I click.but sometimes, I miss." -FURI
+            "I'm a simple man, I see head I click.but sometimes, I miss." ~ URI
             </div>
             <div class="quote">
                 <br>
