Update quote attribution from URI to FURI

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <br>
             "You can hide your cheats but you cannot hide how bad you are." ~ NeokCS<br>
             <br>
-            "I'm a simple man, I see head I click.but sometimes, I miss." ~ URI
+            "I'm a simple man, I see head I click.but sometimes, I miss." ~ FURI
             </div>
             <div class="quote">
                 <br>
